postgresql-10 (10~beta3-1) experimental; urgency=medium

  * Team upload.
  * Third PostgreSQL 10 Beta release.
  * debian/rules: Unconditionally use DEB_BUILD_MAINT_OPTIONS=hardening=+all.
    The old logic is kept around for compiling on older distributions.

 -- Christoph Berg <christoph.berg@credativ.de>  Tue, 08 Aug 2017 09:49:12 +0200

postgresql-10 (10~beta2-1) experimental; urgency=medium

  * Team upload.
  * Second PostgreSQL 10 Beta release.
  * On regression test failure, show newest three log files instead of relying
    on file age = 0 min.

 -- Christoph Berg <christoph.berg@credativ.de>  Thu, 13 Jul 2017 10:08:59 +0200

postgresql-10 (10~beta1-1) experimental; urgency=medium

  * Team upload.
  * First PostgreSQL 10 Beta release.

 -- Christoph Berg <christoph.berg@credativ.de>  Tue, 09 Aug 2016 10:01:06 +0200

postgresql-10 (10~~devel-1) UNRELEASED; urgency=medium

  * New major upstream version 10; packaging based on postgresql-9.6.
  * Merge postgresql-contrib-10 package into postgresql-10. The added
    packaging complexity doesn't seem worth the split anymore given the extra
    dependencies are typically very small on average systems, or already
    installed anyway (libuuid, libxslt).
  * Enable ICU support.

 -- Christoph Berg <christoph.berg@credativ.de>  Tue, 09 Aug 2016 10:01:06 +0200