@@ -25,8 +25,6 @@ export DEB_BUILD_MAINT_OPTIONS = hardening=+all
 #PIE# export DEB_BUILD_MAINT_OPTIONS = hardening=+all,-pie
 DPKG_EXPORT_BUILDFLAGS = 1
 include /usr/share/dpkg/buildflags.mk
-LDFLAGS+= -Wl,--as-needed -L/usr/lib/mit-krb5 -L/usr/lib/$(DEB_HOST_MULTIARCH)/mit-krb5
-CFLAGS+= -I/usr/include/mit-krb5
 #PIE# # skip -pie on 32bit archs for performance and stability reasons
 #PIE# # (http://www.postgresql.org/message-id/20140519115318.GB7296@msgid.df7cb.de, #797530)
 #PIE# ifneq ($(shell dpkg-architecture -qDEB_HOST_ARCH_BITS || :),32)
@@ -88,7 +86,10 @@ COMMON_CONFIGURE_FLAGS= \
 ifeq ($(DEB_STAGE),stage1)
 BOOTSTRAP_FLAGS=
 else
-BOOTSTRAP_FLAGS= --with-krb5 --with-gssapi --with-ldap
+BOOTSTRAP_FLAGS= --with-gssapi --with-ldap \
+		 --with-includes=/usr/include/mit-krb5 \
+		 --with-libs=/usr/lib/mit-krb5 \
+		 --with-libs=/usr/lib/$(DEB_HOST_MULTIARCH)/mit-krb5
 endif
 
 # build should fail on test suite failures on all arches
