@@ -4,6 +4,7 @@ postgresql-10 (10~beta3-1) experimental; urgency=medium
   * Third PostgreSQL 10 Beta release.
   * debian/rules: Unconditionally use DEB_BUILD_MAINT_OPTIONS=hardening=+all.
     The old logic is kept around for compiling on older distributions.
+  * Remove long obsolete --with-krb5 and move c/ldflags to configure switches.
 
  -- Christoph Berg <christoph.berg@credativ.de>  Tue, 08 Aug 2017 09:49:12 +0200
 
